--- a/pyexcel_xlsxw.yml
+++ b/pyexcel_xlsxw.yml
@@ -1,8 +1,9 @@
 overrides: "pyexcel.yaml"
 name: "pyexcel-xlsxw"
 nick_name: xlsxw
-version: 0.4.0
-release: 0.4.0
+version: 0.4.1
+current_version: 0.4.1
+release: 0.4.1
 file_type: xlsx
 dependencies:
   - XlsxWriter==0.9.3
