--- a/.moban.yml
+++ b/.moban.yml
@@ -1,9 +1,14 @@
+requires:
+  - type: git
+    url: https://github.com/moremoban/pypi-mobans
+    submodule: true
+  - https://github.com/pyexcel/pyexcel-mobans
 configuration:
-  configuration_dir: "commons/config"
+  configuration_dir: "pyexcel-mobans:config"
   template_dir:
-  - "commons/templates"
-  - "setupmobans/templates"
-  - ".moban.d"
+    - "pyexcel-mobans:templates"
+    - "pypi-mobans:templates"
+    - ".moban.d"
   configuration: pyexcel_xlsxw.yml
 targets:
   - README.rst: README.rst
