--- a/.travis.yml
+++ b/.travis.yml
@@ -11,20 +11,6 @@ python:
   - 3.6
   - 3.5
   - 2.7
-matrix:
-  include:
-    - python: 2.7
-      dist: trusty
-      sudo: required
-      virtualenv:
-        system_site_packages: true
-      addons:
-        apt:
-          sources:
-            - debian-sid  # openpyxl 2.3.0
-          packages:
-            - python-openpyxl
-
 
 stages:
   - lint
@@ -46,7 +32,7 @@ stages:
   env:
     - MINREQ=0
   stage: moban
-  install: pip install moban>=0.0.4 gitfs2 pypifs
+  install: pip install moban gitfs2 pypifs moban-jinja2-github moban-ansible
   script:
     - moban
     - git diff --exit-code
@@ -59,8 +45,6 @@ jobs:
 stage: test
 
 before_install:
-  - if [[ $TRAVIS_PYTHON_VERSION == "2.6" ]]; then pip install ordereddict; fi
-  - pip install --upgrade pip>8 setuptools>21
   - if [[ -f min_requirements.txt && "$MINREQ" -eq 1 ]]; then
       mv min_requirements.txt requirements.txt ;
     fi
