--- a/pyexcel-xlsxw.yml
+++ b/pyexcel-xlsxw.yml
@@ -1,11 +1,15 @@
 overrides: "pyexcel.yaml"
 name: "pyexcel-xlsxw"
 nick_name: xlsxw
-version: 0.4.3
-current_version: 0.4.3
+version: 0.6.0
+current_version: 0.6.0
 release: 0.4.3
 file_type: xlsx
 dependencies:
   - XlsxWriter>=0.9.3
   - pyexcel-io>=0.4.0
+test_dependencies:
+  - pyexcel
+  - pyexcel-xls
+  - pyexcel-xlsx
 description: A wrapper library to write data in xlsx and xlsm format
