--- a/changelog.yml
+++ b/changelog.yml
@@ -4,8 +4,8 @@ releases:
 - changes:
   - action: Updated
     details:
-    - 'New style xlsx plugins, promoted by pyexcel-io v0.6.0.'
-  date: tbd
+    - 'New style xlsx plugins, promoted by pyexcel-io v0.6.2.'
+  date: 8.10.2020
   version: 0.6.0
 - changes:
   - action: updated
