--- a/changelog.yml
+++ b/changelog.yml
@@ -4,6 +4,12 @@ releases:
 - changes:
   - action: Updated
     details:
+    - '`#9`: pyexcel-xlsxw 0.6.0 failed to write to a stream'
+  date: 8.10.2020
+  version: 0.6.1
+- changes:
+  - action: Updated
+    details:
     - 'New style xlsx plugins, promoted by pyexcel-io v0.6.2.'
   date: 8.10.2020
   version: 0.6.0
